import React from 'react';
import { shallow } from "enzyme";
import GifExpertApp from '../GifExpertApp'

describe('Pruebas al componente <GifExpertApp />', () => {

  test('debe de mostrarse correctamente', () => {
    const wrapper = shallow(<GifExpertApp />)
    expect( wrapper ).toMatchSnapshot();
  });

  test('debe de mostrar una lista de categorias por default', () => {
    const categories = ['Overwatch', 'GOT'];
    const wrapper = shallow(<GifExpertApp defaultCategories={categories}/>);

    expect(wrapper).toMatchSnapshot();
    expect( wrapper.find('GifGrid').length).toBe(categories.length);
  });

});