// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente <GifExpertApp /> debe de mostrar una lista de categorias por default 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Overwatch"
      key="Overwatch"
    />
    <GifGrid
      category="GOT"
      key="GOT"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas al componente <GifExpertApp /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
